# django-svelte-postgres-boilerplate

./: +page.svelte  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/api/management/commands/: create_groups.py
backend/api/migrations/: 0001_initial.py  0002_uploadedfile_compressed_content.py
backend/api/tasks/: compress.py
backend/core/: celery.py  compression.py  field_file_patch.py  logger_config.py  settings.py  urls.py
backend/tests/: test_api.py
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
frontend/src/routes/: +page.server.ts  +page.svelte
nginx/conf.d/: django.conf
