[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.2.7",
    "django>=3.2.25",
    "django-cors-headers>=4.1.0",
    "djangorestframework>=3.15.1",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "python-dotenv>=0.21.1",
    "redis>=5.0.8",
]
